conduct experiment highpassAudioEmotionRecognition.

--- a/.gitignore
+++ b/.gitignore
@@ -188,4 +188,6 @@ dmypy.json
 output
 saved_models
 oldModels
+FilteredFeatures.pkl
+nonFilterFeatures.pkl
 # End of https://www.toptal.com/developers/gitignore/api/python,linux,macos
