--- a/.gitignore
+++ b/.gitignore
@@ -185,9 +185,10 @@ dmypy.json
 
 # profiling data
 .prof
-output
-saved_models
-oldModels
+output/
+saved_models/
+oldModels/
+saved_models_noGender/
 FilteredFeatures.pkl
 nonFilterFeatures.pkl
 # End of https://www.toptal.com/developers/gitignore/api/python,linux,macos
